// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> matches snapshot 1`] = `
<styled.label
  className="nulla aut sunt est rerum at sint"
  htmlFor="3d4e59ed-eec4-406f-9f73-2a072edb7370"
>
  <div
    key="2d9e9bcc-f46a-4516-8896-4ffea6ae8c41"
  >
    autem et modi tenetur amet modi reprehenderit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 2`] = `
<styled.label
  className="voluptatem est eius dolorem amet quia quia"
  htmlFor="0eb19c9d-f4c7-45c8-8ec3-9a2d7cbe5515"
>
  <div
    key="db27b158-9f4a-456b-b681-86e8d13d38d9"
  >
    quos eum voluptate sit saepe assumenda deserunt
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 3`] = `
<styled.label
  className="molestiae quas omnis qui illo excepturi esse"
  htmlFor="abcd03b1-37fd-43a9-b071-bf8f05fde2b6"
>
  <div
    key="14569106-585b-44a3-bfc8-21a85a821132"
  >
    et ut voluptatem quia dolor eum velit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 4`] = `
<styled.label
  className="ea necessitatibus sed ea ab doloremque est"
  htmlFor="5880acd5-70bf-4183-af87-118b580816d1"
>
  voluptatum id porro ea numquam consequatur et
  <span
    key="b1528ee7-80ec-49de-b290-25f0a7ae53c8"
  >
    sapiente molestiae dolores voluptas placeat vitae ut
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 5`] = `
<styled.label
  className="nihil porro suscipit sit eos maxime at"
  htmlFor="eef9af76-3f20-4c2b-b7eb-701ae5069766"
>
  <span
    key="1b95891f-884c-4e2c-84c1-45c133c18bab"
  >
    itaque qui dolorem voluptatem laboriosam iusto et
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 6`] = `
<styled.label
  className="eius quod a nisi et est ab"
  htmlFor="401d4989-5f93-498f-97b2-3148391af1cf"
>
  <div
    key="b572ac0f-b809-4cde-a7d4-77cee5c50a83"
  >
    et optio laborum officia iure eius veritatis
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 7`] = `
<styled.label
  className="aliquid iure eos expedita assumenda eligendi aut"
  htmlFor="58450789-1989-4db8-a776-5bbc9a7d810b"
>
  quas consequuntur dolores nihil eligendi sunt aliquid
</styled.label>
`;

exports[`<Label /> matches snapshot 8`] = `
<styled.label
  className="cum qui aut natus aperiam est est"
  htmlFor="4c303851-873d-4c77-b691-e5902ed9b12a"
>
  ipsum et explicabo vel quaerat fuga enim
  <span
    key="0c57ad21-616b-41e7-8168-f8dfd2abfc8d"
  >
    dolores incidunt est nostrum quae et consequatur
  </span>
</styled.label>
`;
